--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 -->
 <!DOCTYPE html>
 <html>
+ 
 
 <head>
 	<title></title>
@@ -44,7 +45,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
 					<div class="email-right">
 						<h6 class="caption"><a href="#contact">Эл. почта</a> </h6>
-						<p><a href="" class="info" style = "color: #fff;"> info@example.com</a></p>
+						<p><a href="" class="info" style = "color: #fff;"> info@exaple.com</a></p>
 
 					</div>
 
