--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		</div>
 		<div class="clearfix"> </div>
 	</div>
-	<marquee behavior="scroll"style = "background-color: #fff; color: #000; font-size: 35px" class = "col-md-12 col-lg-12 col-sm-12"> Ночные пакеты 555 тг!!! При пополнении аккаунта на 1500тг, мы дарим вам +1500 бонусных баллов!!! </marquee>
+	<marquee behavior="scroll"style = "background-color: #fffffe; color: #000; font-size: 35px" class = "col-md-12 col-lg-12 col-sm-12"> Ночные пакеты 555 тг!!! При пополнении аккаунта на 1500тг, мы дарим вам +1500 бонусных баллов!!! </marquee>
 
 	<!-- //header -->
 	
